--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "firebase": "^10.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -39,6 +41,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "styled-components": "^5"
   },
   "devDependencies": {
     "daisyui": "^4.7.2",
